--- a/app/css/hero-summary.css
+++ b/app/css/hero-summary.css
@@ -26,15 +26,21 @@ a.panel {
     overflow: hidden;
 }
 
-a.panel:hover, a.panel:focus, a.panel:active {
+a.panel:hover, 
+a.panel:focus, 
+a.panel:active {
     text-decoration: none;
 }
 
-a.panel:hover .overlay, a.panel:focus .overlay, a.panel:active .overlay {
+a.panel:hover .overlay, 
+a.panel:focus .overlay, 
+a.panel:active .overlay {
     transform: scaleY(1);
 }
 
-a.panel:hover .title-container, a.panel:focus .title-container, a.panel:active .title-container {
+a.panel:hover .title-container, 
+a.panel:focus .title-container, 
+a.panel:active .title-container {
     color: #fff;
     text-shadow: 1px 1px 2px #737373;
 }
